--- a/catalog.html
+++ b/catalog.html
@@ -256,7 +256,7 @@
 
 
     
-    <section class="additional-items">
+    <section class="additional-items green-line-title-container">
         <h3>Дополнительные товары</h3>
 
         <div class="container-grid-4col">
