--- a/markup.html
+++ b/markup.html
@@ -90,11 +90,11 @@
         </div>
         <div class="card">
             <h2>5. checkbox, radio, button, ol, ul, scroll</h2>
-            <div class="checkbox-container">
+            <div class="input-row">
                 <input type="radio" id="radio">
                 <label for="radio">radio</label>
             </div>
-            <div class="checkbox-container">
+            <div class="input-row">
                 <input type="checkbox" id="checkbox">
                 <label for="checkbox">checkbox</label>
             </div>
