--- a/form.html
+++ b/form.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="input-row">
                     <label class="label-phone" for="owner-phone">Телефон:*</label>
-                    <input type="email" id="owner-phone" name="owner-phone" placeholder="####" required>
+                    <input type="tel" id="owner-phone" name="owner-phone" placeholder="####" required>
                 </div>
             </div>
         </fieldset>
@@ -113,7 +113,7 @@
         </fieldset>
 
 
-        <fieldset class="container-grid-2col">
+        <fieldset class="container-grid-2col submit-container">
             <input class="button-catalog-main button-big" type="submit" value="Отправить заявку">
             <p class="form-notes">* — Обязательные поля</p>
         </fieldset>
@@ -167,6 +167,15 @@
     </footer>
 <!--MAP FOOTER END-->
 
+
+
+
+
+
+
+<script src="js/jquery-v3.6.1.js"></script>
+<script src="js/jquery.mask.js"></script>
+<script src="js/script-form.js"></script>
 
 </body>
 
